Add sass build process and update makrup for site container.

--- a/themes/wilks/layouts/_default/baseof.html
+++ b/themes/wilks/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
 	{{- end }}
 </head>
 <body>
-	<div class="site-layout">
+	<div class="site-container">
 		{{ partial "header" . }}
 		{{ block "main" . }}{{ end }}
 		{{ partial "footer" . }}
