--- a/themes/wilks/layouts/partials/pagination.html
+++ b/themes/wilks/layouts/partials/pagination.html
@@ -1,9 +1,9 @@
-<div>
+<nav class="pager">
 {{ if .Paginator.HasPrev }}
-	<a href="{{ .Paginator.Prev.URL }}">Previous Page</a>
+	<a href="{{ .Paginator.Prev.URL }}" class="pager__item">Previous</a>
 {{ end }}
-{{ .Paginator.PageNumber }} of {{ .Paginator.TotalPages }}
+	<span class="pager__info">{{ .Paginator.PageNumber }} of {{ .Paginator.TotalPages }}</span>
 {{ if .Paginator.HasNext }}
-	<a href="{{ .Paginator.Next.URL }}">Next Page</a>
+	<a href="{{ .Paginator.Next.URL }}" class="pager__item">Next</a>
 {{ end }}
-</div>
+</nav>
