--- a/themes/wilks/layouts/_default/list.html
+++ b/themes/wilks/layouts/_default/list.html
@@ -1,15 +1,15 @@
 {{ define "main" }}
 	<main>
 		{{ if or .Title .Content }}
-		<div>
 			{{ with .Title }}<h1>{{ . }}</h1>{{ end }}
 			{{ with .Content }}<div>{{ . }}</div>{{ end }}
-		</div>
 		{{ end }}
 
+		<ol class="post-list">
 		{{ range .Paginator.Pages }}
-			{{ .Render "summary" }}
+			<li class="post-list__item">{{ .Render "summary" }}</li>
 		{{ end }}
+		</ol>
 		{{ partial "pagination.html" . }}
 	</main>
 {{ end }}
