Add wrapper and time and date to singles/

--- a/themes/wilks/layouts/_default/page-single.html
+++ b/themes/wilks/layouts/_default/page-single.html
@@ -1,7 +1,9 @@
 {{ define "main" }}
   <article>
     <h1>{{ .Title }}</h1>
-    {{ .Content }}
+    <div class="article-content">
+      {{ .Content }}
+    </div>
   </article>
   {{ partial "sidebar.html" . }}
 {{ end }}
