--- a/themes/wilks/layouts/_default/single.html
+++ b/themes/wilks/layouts/_default/single.html
@@ -1,20 +1,10 @@
 {{ define "main" }}
 	<main>
 		<article>
+			<time class="date-time" datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "January 2, 2006" }}</time>
 			<h1>{{ .Title }}</h1>
-			<time>{{ .Date.Format "02.01.2006 15:04" }}</time>
-			<div>
+			<div class="article-content">
 				{{ .Content }}
-			</div>
-			<div>
-				<ul id="tags">
-					{{ range .Params.tags }}
-					<li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></li>
-					{{ end }}
-				</ul>
-			</div>
-			<div>
-				{{ template "_internal/disqus.html" . }}
 			</div>
 		</article>
 	</main>
