--- a/themes/wilks/layouts/partials/sidebar.html
+++ b/themes/wilks/layouts/partials/sidebar.html
@@ -1,31 +1,31 @@
 <section>
-	<h1>Things I've Launched 🚀</h1>
-	<ol>
-		<li>
+	<h1 class="icon icon--work">Things I've Launched</h1>
+	<ol class="simple-list">
+		<li class="simple-list__item">
 			<a href="https://tuco.ac.uk">https://tuco.ac.uk</a>
 			<em>(Front end & Drupal 8)</em>
 		</li>
-		<li>
+		<li class="simple-list__item">
 			<a href="https://ipaf.org">https://ipaf.org</a>
 			<em>(Front end & Multilingual Drupal 8)</em>
 		</li>
-		<li>
+		<li class="simple-list__item">
 			<a href="https://argyllholidays.com">https://argyllholidays.com</a>
 			<em>(Front end & Drupal 8)</em>
 		</li>
-		<li>
+		<li class="simple-list__item">
 			<a href="https://argyllholidayhomesales.com">https://argyllholidayhomesales.com</a>
 			<em>(Front end & Drupal 8)</em>
 		</li>
-		<li>
+		<li class="simple-list__item">
 			<a href="http://jlr-triage.com">http://jlr-triage.com</a>
 			<em>(Front end & Multilingual Drupal 7)</em>
 		</li>
-		<li>
+		<li class="simple-list__item">
 			<a href="https://www.thenewhumanitarian.org/">https://www.thenewhumanitarian.org/</a>
 			<em>(Front end & Multilingual Drupal 7)</em>
 		</li>
-		<li>
+		<li class="simple-list__item">
 			<a href="https://clarachbay.com">https://clarachbay.com</a>
 			<em>(Front end & Drupal 8)</em>
 		</li>
