--- a/themes/wilks/layouts/_default/baseof.html
+++ b/themes/wilks/layouts/_default/baseof.html
@@ -15,6 +15,7 @@
 		{{ with .OutputFormats.Get "RSS" -}}
 			{{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .RelPermalink $.Site.Title | safeHTML }}
 		{{- end }}
+		<link rel="icon" href="{{ "images/favicon.ico" | relURL }}" type="image/x-icon" />
 	</head>
 	<body>
 		<div class="site-container">
