--- a/themes/wilks/static/css/src/includes/_header.scss
+++ b/themes/wilks/static/css/src/includes/_header.scss
@@ -1,33 +1,37 @@
 .site-header {
   width: 100%;
   margin-bottom: 10rem;
+
+  @media #{$breakpoint-small-x} {
+    margin-bottom: 8rem;
+  }
 }
 
 .intro {
   font-size: 5rem;
-  margin-top: 10rem;
   font-weight: $font-weight-black;
   color: #111;
-  margin-bottom: 3rem;
-
-  a {
-    color: #ff4e50;
-    text-decoration: none;
-    font-weight: $font-weight-black;
-    border-bottom: 0.3rem solid #ff4e50;
-  }
 
   @media #{$breakpoint-medium} {
     font-size: $font-size-large;
   }
-}
 
-.site-header__title {
-  font-size: 6rem;
-  margin-top: 10rem;
-  font-weight: 700;
-  color: #111;
-  margin-bottom: 3rem;
+  @media #{$breakpoint-small-x} {
+    font-size: 2.5rem;
+  }
+
+  a {
+    color: $color-brand-orange;
+    text-decoration: none;
+    font-weight: $font-weight-black;
+    border-bottom: 0.5rem solid $color-brand-orange;
+    transition: border-color ease-in-out 0.2s;
+
+    &:hover,
+    &:focus {
+      border-color: $color-dark;
+    }
+  }
 }
 
 .site-nav {
@@ -37,15 +41,25 @@
 
 .site-nav__link {
   font-size: 1.5rem;
-  font-weight: $font-weight-bold;
+  font-weight: $font-weight-black;
   text-decoration: none;
-  color: #111;
-  border-bottom: 0.2rem solid #111;
+  color: $color-dark;
+  border-bottom: 0.2rem solid #DDD;
   padding-bottom: 0.5rem;
+  transition: border-color ease-in-out 0.2s;
+
+  &:hover,
+  &:focus {
+    border-color: $color-dark;
+  }
 }
 
 .site-nav__link:not(:last-child) {
   margin-right: 5rem;
+
+  @media #{$breakpoint-small-x} {
+    margin-right: 2.5rem;
+  }
 }
 
 .logo {
@@ -56,8 +70,15 @@
   height: 5rem;
   background-size: 4rem auto;
   display: block;
-  background-color: transparent;
+  background-color: $color-light;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   margin-right: auto;
   text-indent: -9999em;
+  transition: all ease-in-out 0.2s;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 0 $color-light;
+    background-color: $color-brand-yellow;
+  }
 }
