--- a/themes/wilks/layouts/_default/summary.html
+++ b/themes/wilks/layouts/_default/summary.html
@@ -1,12 +1,10 @@
-<article>
-	<time class="date-time" datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "January 2, 2006" }}</time>
-	<h2>
-		<a href="{{ .Permalink }}">{{ .Title }}</a>
-		<span class="read-time">{{ .ReadingTime }} minute read.</span>
-	</h2>
+<a href="{{ .Permalink }}" title="Read {{ .Title }}" class="teaser teaser--{{ .Params.theme }}">
+	<time class="teaser__date" datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "January 2, 2006" }}</time>
+	<h2 class="teaser__title">{{ .Title }}</h2>
+	<div class="read-time">{{ .ReadingTime }} minute read.</div>
 	<ul class="tags">
 		{{ range .Params.tags }}
 		<li class="tags__item tags__item--{{ . }}">{{ . }}</li>
 		{{ end }}
 	</ul>
-</article>
+</a>
