--- a/themes/wilks/static/css/src/includes/_header.scss
+++ b/themes/wilks/static/css/src/includes/_header.scss
@@ -79,6 +79,6 @@
   &:hover,
   &:focus {
     box-shadow: 0 0 0 $color-light;
-    background-color: $color-brand-yellow;
+    background-color: #EEE;
   }
 }
