--- a/themes/wilks/static/css/main.css
+++ b/themes/wilks/static/css/main.css
@@ -68,6 +68,7 @@ h1 {
   background-position: right center;
   background-repeat: no-repeat;
   background-size: auto 25px;
+  display: inline-block;
 }
 
 @media only screen and (max-width: 40.625em) {
@@ -145,12 +146,12 @@ em {
   margin-bottom: 0.5rem;
 }
 
-a:not([class]) {
+a {
   color: #111;
   font-weight: 700;
 }
 
-a:not([class]):hover, a:not([class]):focus {
+a:hover, a:focus {
   text-decoration: none;
 }
 
@@ -292,7 +293,7 @@ th {
 .logo:hover, .logo:focus {
   -webkit-box-shadow: 0 0 0 #FFF;
           box-shadow: 0 0 0 #FFF;
-  background-color: #F9D423;
+  background-color: #EEE;
 }
 
 .site-container {
@@ -315,13 +316,6 @@ th {
     padding: 2rem;
     margin-right: 1rem;
   }
-}
-
-article p {
-  font-size: 1.8rem;
-  line-height: 1.6;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 
 footer {
@@ -356,15 +350,97 @@ code {
 
 .post-list {
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 -1rem;
+}
+
+@media only screen and (max-width: 40.625em) {
+  .post-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .post-list__item {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
+  padding: 1rem;
 }
 
-.post-list__item:not(:last-child) {
-  border-bottom: 0.2rem solid rgba(0, 0, 0, 0.1);
+@media only screen and (max-width: 40.625em) {
+  .post-list__item {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 100%;
+            flex: 1 0 100%;
+  }
+}
+
+.teaser {
+  padding: 2.5rem 2rem;
+  background-color: #111;
+  height: 100%;
+  border-top: 0.5rem solid #F9D423;
+  position: relative;
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  color: #F9D423;
+}
+
+.teaser * {
+  color: #FFF;
+}
+
+.teaser:hover .teaser__title, .teaser:focus .teaser__title {
+  color: inherit;
+}
+
+.teaser__title {
+  font-size: 2.2rem;
+  margin-top: 0;
+  margin-bottom: 2rem;
+  -webkit-transition: color ease-in-out 0.2s;
+  transition: color ease-in-out 0.2s;
+}
+
+.teaser__date {
+  font-weight: 800;
+  font-size: 1.2rem;
+  color: #d1d1d1;
+}
+
+.read-time {
+  margin-top: auto;
+  color: #d1d1d1;
+  font-size: 1.5rem;
+}
+
+.teaser--drupal {
+  border-color: #0077C0;
+  color: #0077C0;
+}
+
+.teaser--performance {
+  border-color: #2e8b57;
+  color: #2e8b57;
+}
+
+.teaser--personal {
+  border-color: #7b68ee;
+  color: #7b68ee;
 }
 
 .tags {
@@ -374,14 +450,20 @@ code {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   list-style: none;
+  position: absolute;
+  right: 2rem;
+  top: 0;
 }
 
 .tags__item {
   margin-right: 1rem;
   padding: 0.5rem;
   color: #FFF;
-  background-color: #111;
+  background-color: #F9D423;
   font-size: 1.2rem;
+  font-weight: 700;
+  line-height: 1;
+  padding-top: 0.5rem;
 }
 
 .tags__item--drupal {
@@ -396,14 +478,17 @@ code {
   background-color: #7b68ee;
 }
 
-.read-time {
-  color: #d1d1d1;
-  font-size: 1.8rem;
-}
-
 .date-time {
   text-transform: uppercase;
   font-size: 1.2rem;
   color: #111;
   font-weight: 600;
+}
+
+.pager {
+  font-size: 1.2rem;
+  font-weight: 800;
+  color: #111;
+  text-align: left;
+  margin-top: 2rem;
 }
